<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/appconfig_layout"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/app_modify_tickertext"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <androidx.top.hyperos.dynamic.notify.widget.Switch
            android:id="@+id/app_music"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/app_shield_str"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <androidx.top.hyperos.dynamic.notify.widget.Switch
            android:id="@+id/app_shield"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_time_short_str"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/app_time_short"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_time_long_str"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/app_time_long"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:inputType="number" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/app_info_intercept_str"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/app_info_intercept"
            style="@style/NoLineEditText"
            android:layout_width="match_parent"
            android:layout_height="38dp"

            android:inputType="text"
            android:textSize="10sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/app_cancal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@android:string/cancel"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/app_save_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/app_save"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>